--- a/practica.html
+++ b/practica.html
@@ -26,16 +26,17 @@
                </label>
            </div>
             <div class="form-control">
-                <button  type="submit">Iniciar sesion </button>
+                <button   onclick="login">Iniciar sesion </button>
             </div>
            <div class="form-control">
-                <a href="">¿Olvidaste la contraseña?</a>
+                <a href="" class="text-center block">¿Olvidaste la contraseña?</a>
            </div>
     </main>
     <footer>
         <hr>
         <p class="negrita"> todos los derechos reservados &copy; 2017 </p>
     </footer>
+    <script href="C:\Users\jesus\Documents\OCTAVO TRIMESTRE\Desarrollo APM\app.js"></script>
 </body>
 
 </html>
